@@ -364,15 +364,14 @@ Write to a name file (equivalent to $.write: :$file)
 ### is-valid
 
 ```raku
-multi method is-valid(LibXML::Dtd :$dtd --> Bool)
+multi method is-valid(LibXML::Dtd $dtd? --> Bool)
 multi method is-valid(LibXML::Element $elem --> Bool)
+multi method is-valid(LibXML::Attr $attr --> Bool)
 ```
 
-Checks that the document, or a an element in the document, is valid
+Checks that the document, or a an element, or attribute in the document, is valid. Returns either True or False.
 
-Returns either True or False depending on whether the DOM Tree is a valid Document or not.
-
-Optionally accepts an Element to check. The element may be at any level in the document, and is checked as a sub-tree in isolation.
+Optionally accepts an element or attribute to check. The element may be at any level in the document, and is checked as a sub-tree in isolation.
 
 You may also pass in a [LibXML::Dtd](https://libxml-raku.github.io/LibXML-raku/Dtd) object, to validate the document against an external DTD:
 
@@ -393,15 +392,16 @@ Whether the document was valid when it was parsed
 ### method validate
 
 ```raku
-multi method validate(LibXML::Dtd :$dtd)
+multi method validate(LibXML::Dtd $dtd?)
 multi method validate(LibXML::Element $elem)
+multi method validate(LibXML::Attr $attr)
 ```
 
-Validates, either the entire document, or an individual element
+Validates, either the entire document, or an individual element, or attribute
 
-This is an exception throwing equivalent of is-valid. If the document is not valid it will throw an exception containing the error. This allows you much better error reporting than simply is_valid or not.
+This is an exception throwing equivalent of is-valid. If the document is not valid it will throw an exception containing the error.
 
-Again, you may pass in a DTD object
+It is also possible to write: `$node.validate` as a shortcut for `$node.ownerDocument.validate($node)` and `$node.is-valid` as a shortcut for `$node.ownerDocument.is-valid($node)`
 
 ### method documentElement
 
